name:                xml-clark
version:             0.1.0.0
synopsis:            High-level XML Namespace handling for Haskell.
description:         See README.md
homepage:            https://github.com/roberth/xml-clark#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Hensing
maintainer:          robert@roberthensing.nl
copyright:           Robert Hensing
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.XML.Clark
  exposed-modules:     Data.XML.Clark.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
  ghc-options:         -Wall

test-suite xml-clark-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.XML.ClarkSpec
  build-depends:       base
                     , xml-clark
                     , hspec
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roberth/xml-clark
